Fix spacing and add colour

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,11 +9,15 @@ html {
 *:after {
   font-family: 'Roboto Mono', monospace;
   box-sizing: border-box;
+  margin: 0;
+  vertical-align: baseline;
 }
 
 .header {
   text-align: center;
-  margin: 0 5em;
+  padding: 0 5em;
+  background-color: #a23e48;
+  color: white;
 }
 
 .header-options {
